[package]
name = "cuda-observer"
version = "0.1.0"
edition = "2021"
description = "Reactive subscriptions and change detection"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Lucineer/cuda-observer"
readme = "README.md"
keywords = ["ai", "fleet", "agent", "rust"]
categories = ["science"]

[dependencies]
serde = { version = "1", features = ["derive"] }

